# caric_msg

./: .gitignore  README.md
ros1/caric_mission/: CMakeLists.txt  README.md
ros1/mav_comm/mav_msgs/msg/: GpsWaypoint.msg
ros1/rotors_comm/: CMakeLists.txt  package.xml
ros2/caric_mission/: CMakeLists.txt  package.xml
ros2/rotors_comm/: CMakeLists.txt  package.xml
ros2/rotors_comm/msg/: BoolStamped.msg  PPComTopology.msg  WindSpeed.msg
